@@ -1,3 +1,8 @@
+Fri Aug 20 17:01:23 1999  Jeffrey A Law  (law@cygnus.com)
+
+	* elf-hppa.h (elf_hppa_fake_sections): Compute section indices
+	here instead of using elf_section_data...
+
 1999-08-19  Nick Clifton  <nickc@cygnus.com>
 
 	* coff-mcore.c (mcore_emit_base_file_entry): New function:  Emit
